Fix overlay not covering the whole page for websites with body's height set to 100%

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,7 @@
-body {
+html, body {
 	position: relative;
+	height: inherit;
+	min-height: 100%;
 }
 .pin-clip-overlay {
 	position: absolute;
